# filter-logger

./: .travis.yml  README.md  filter-logger.cabal
app/: Main.hs
examples/basic/: Main.hs
examples/password/: Main.hs
src/Network/Wai/Middleware/: FilterLogger.hs
src/Network/Wai/Middleware/FilterLogger/: Colorizer.hs  Internal.hs
test/: Spec.hs
