name:                filter-logger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/caneroj1/filter-logger#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Canero
maintainer:          jmc41493@gmail.com
copyright:           Copyright: (c) 2016 Joe Canero
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.FilterLogger
                     , Network.Wai.Middleware.FilterLogger.Internal
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , data-default
                     , fast-logger
                     , http-types
                     , wai
                     , wai-extra
  default-language:    Haskell2010

executable filter-logger-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , filter-logger
                     , bytestring
                     , scotty
  default-language:    Haskell2010

test-suite filter-logger-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , filter-logger
                     , bytestring
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/filter-logger
